corpus/comments.txt
================================================================================
single line comment
================================================================================

# I'm a comment and I can be anywhere

--------------------------------------------------------------------------------

(source_file
  (comments))

================================================================================
a pound (#) inside a string is a string and not a comment
================================================================================

$string = "This is a string with # in it";

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (assignment_expression
      (scalar_identifier)
      (string))
    (semi_colon)))
