corpus/for_statements.txt
================================================================================
for loop - simple
================================================================================
for ( $i = 0; $i < $arraylen; $i++ ){
 log.info ( "Element #" . $i . " " . $array[$i]);
}
--------------------------------------------------------------------------------

(source_file
  (for_statement
    (assignment_expression
      (scalar_identifier)
      (number))
    (semi_colon)
    (binary_expression
      (scalar_identifier)
      (scalar_identifier))
    (semi_colon)
    (update_expression
      (scalar_identifier))
    (statement_block
      (expression_statement
        (call_expression
          (member_expression
            (identifier)
            (property_identifier))
          (arguments
            (binary_expression
              (binary_expression
                (binary_expression
                  (string)
                  (scalar_identifier))
                (string))
              (subscript_expression
                (scalar_identifier)
                (scalar_identifier)))))
        (semi_colon)))))
