corpus/functions.txt
================================================================================
function
================================================================================
sub foo($bar) {
  # abc 
}
sub bar($bar) {
  # abc 
}
--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (formal_parameters
      (scalar_identifier))
    (statement_block
      (comments)))
  (function_declaration
    (identifier)
    (formal_parameters
      (scalar_identifier))
    (statement_block
      (comments))))
