corpus/imports.txt
================================================================================
Imports
================================================================================
import foo;
foo.headbug();
--------------------------------------------------------------------------------

(source_file
  (import_statement
    (identifier)
    (semi_colon))
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (property_identifier))
      (arguments))
    (semi_colon)))

================================================================================
Imports with alias
================================================================================
import foo as mylib;
mylib.headbug();

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (identifier)
    (identifier)
    (semi_colon))
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (property_identifier))
      (arguments))
    (semi_colon)))

================================================================================
Imports using string
================================================================================
import "foo bar" as foobar;
--------------------------------------------------------------------------------

(source_file
  (import_statement
    (string)
    (identifier)
    (semi_colon)))
